<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.fragment.SignInFragment"
    android:id="@+id/flSignin"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="70dp"
        android:layout_marginStart="25dp"
        android:layout_marginEnd="25dp"
        android:layout_marginBottom="25dp"
        android:padding="10dp"
        android:background="@drawable/border_dark_primary"
        >

        <TextView
            android:layout_marginTop="55dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/msg_welcome_back"
            android:textAlignment="center"
            android:textSize="22sp"
            android:textColor="@color/colorPrimaryDark"
            />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/msg_welcome_back_sub"
            android:textAlignment="center"
            android:textSize="15sp"
            android:layout_marginBottom="15dp"
            android:textColor="@color/colorPrimaryDark"
            />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            >
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tiSignIn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/border"
                >
                <EditText
                    android:id="@+id/etSigIn"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:hint="@string/email_login"
                    android:inputType="textEmailAddress"
                    />
            </com.google.android.material.textfield.TextInputLayout>

            <RelativeLayout
                android:layout_marginTop="15dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:background="@drawable/border"
                >

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/tiSignInPass"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    >
                    <EditText
                        android:id="@+id/etSigInPass"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:hint="@string/pass_login"
                        android:inputType="textPassword"
                        />
                </com.google.android.material.textfield.TextInputLayout>

                <ImageButton
                    android:id="@+id/ivVisiblePass"
                    android:layout_gravity="center"
                    android:background="@color/noBackground"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_visibility_black_24dp"
                    android:layout_alignParentEnd="true"
                    android:layout_centerInParent="true"
                    android:scaleType="fitCenter"
                    android:layout_marginEnd="15dp"
                    />

            </RelativeLayout>

            <Button
                android:id="@+id/btnSignIn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/btn_sign_in"
                android:layout_marginTop="25dp"
                android:background="@drawable/btn_rounded"
                android:textColor="@color/colorWhite"
                android:textSize="18sp"
                />
        </LinearLayout>

        <RelativeLayout
            android:layout_marginTop="15dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/msg_forgot"
                android:layout_alignBaseline="@id/btnRetrieve"
                />

            <Button
                android:id="@+id/btnRetrieve"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/btn_retrieve"
                android:background="@color/noBackground"
                android:layout_alignParentEnd="true"
                android:textSize="12sp"
                android:textColor="@color/colorBlueGray"
                />
        </RelativeLayout>

    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:layout_marginBottom="15dp"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/msg_sign_up"
            android:layout_alignBaseline="@id/btnCreateAccountSignIn"
            />

        <Button
            android:id="@+id/btnCreateAccountSignIn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btn_sign_up"
            android:background="@color/noBackground"
            android:layout_alignParentEnd="true"
            android:textSize="12sp"
            android:textColor="@color/colorBlueGray"
            />
    </RelativeLayout>


    <com.mikhaellopez.circularimageview.CircularImageView
        android:id="@+id/ivLogoSignIn"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:src="@drawable/juego_mascota"
        android:scaleType="centerInside"
        android:layout_marginTop="20dp"
        android:layout_gravity="center_horizontal"
        />
</FrameLayout>