<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.fragment.SignUpFragment">

    <LinearLayout
        android:id="@+id/llEmailLogIn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="100dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:padding="10dp"
        android:background="@drawable/border_dark_primary"
        >

        <TextView
            android:layout_marginTop="55dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/msg_welcome"
            android:textAlignment="center"
            android:textSize="22sp"
            android:textColor="@color/colorPrimaryDark"
            />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/msg_welcome_sub"
            android:textAlignment="center"
            android:textSize="15sp"
            android:layout_marginBottom="15dp"
            android:textColor="@color/colorPrimaryDark"
            />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            >
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tiEmailSignUp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="25dp"
                >
                <EditText
                    android:id="@+id/etEmailSigUp"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:hint="@string/email_login"
                    android:inputType="textEmailAddress"
                    android:background="@color/colorWhite"
                    />
            </com.google.android.material.textfield.TextInputLayout>

            <RelativeLayout
                android:layout_marginTop="15dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                >

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/tiPassSignUp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="25dp"
                    >

                    <EditText
                        android:id="@+id/etPassSigUp"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:hint="@string/pass_login"
                        android:inputType="textPassword"
                        android:background="@color/colorWhite"
                        />
                </com.google.android.material.textfield.TextInputLayout>


                <ImageButton
                    android:id="@+id/ivVisiblePassUp"
                    android:layout_gravity="center"
                    android:background="@color/noBackground"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_visibility_black_24dp"
                    android:layout_alignParentEnd="true"
                    android:layout_centerInParent="true"
                    android:scaleType="fitCenter"
                    android:layout_marginEnd="-1dp"
                    />
            </RelativeLayout>

            <Button
                android:id="@+id/btnSignUp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/btn_register"
                android:layout_marginTop="25dp"
                android:background="@drawable/btn_rounded"
                android:textColor="@color/colorWhite"
                android:textSize="18sp"
                android:layout_marginBottom="15dp"
                />
        </LinearLayout>

        <RelativeLayout
            android:layout_marginTop="5dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            >

            <TextView
                android:id="@+id/txtPriv1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/priv_1"
                android:textSize="12sp"
                />
            <TextView
                android:id="@+id/txtPriv2"
                android:layout_marginStart="5dp"
                android:layout_toEndOf="@id/txtPriv1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/priv_2"
                android:linksClickable="true"
                android:textStyle="bold"
                android:textSize="12sp"
                android:singleLine="true"
                />

        </RelativeLayout>
    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:layout_marginBottom="25dp"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/msg_sign_in"
            android:layout_alignBaseline="@id/btnSignInFromSignUp"
            />

        <Button
            android:id="@+id/btnSignInFromSignUp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btn_sign_in"
            android:background="@color/noBackground"
            android:layout_alignParentEnd="true"
            android:textSize="12sp"
            android:textColor="@color/colorBlueGray"
            style="@style/Widget.MaterialComponents.Button.TextButton"
            />
    </RelativeLayout>


    <com.mikhaellopez.circularimageview.CircularImageView
        android:id="@+id/ivLogoSignUp"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:src="@drawable/juego_mascota"
        android:scaleType="centerInside"
        android:layout_marginTop="50dp"
        android:layout_gravity="center_horizontal"
        />

</FrameLayout>